testsuite/tests/properties/invalid_and_or/logic_all_empty/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    @ignored fun f(): Equation = %all()
}
